<resources>
    <string name="app_name">My Immo Exposé</string>

    <!-- Splash Screen -->
    <string name="welcome"> Herzlich Willkommen bei: </string>
    <string name="project_of"> Ein Projekt von:</string>

    <!-- Login / Register -->
    <string name="login"> Anmelden</string>
    <string name="logout"> Abmelden</string>
    <string name="register"> Registrieren</string>
    <string name="login_text"> Bitte loggen Sie sich ein, um alle Vorzüge dieser App nutzen zu können.</string>
    <string name="no_account"> Sie haben noch keinen Account? Dann registrieren Sie sich hier! </string>
    <string name="register_text"> Bitte registrieren Sie sich hier um alle Vorzüge der App "My Immo Expose" nutzen zu können.</string>
    <string name="back_to_login"> Sie besitzen schon einen Account?! Dann klicken Sie hier um zurück zum Login zugelangen.</string>
    <string name="email"> Email</string>
    <string name="email_hint"> example@example.com</string>
    <string name="username"> Username</string>
    <string name="username_hint"> Max Mustermann </string>
    <string name="password"> Enter Passwort</string>
    <string name="pw_placeholder"> **********</string>
    <string name="password_confirm">Confirm Passwort</string>


    <!-- Navigation Drawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Menü- items -->
    <string name="show_all_expose_title"> Meine Exposés</string>
    <string name="import_expose"> Exposé importieren</string>
    <string name="export_expose"> Exposé hochladen</string>
    <string name="my_account"> Mein Account</string>
    <string name="import_export"> Import/ Export</string>
    <string name="add_expose"> Exposé hinzufügen</string>
    <string name="show_all_Expose_text"> Zeige alle Exposés an</string>
    <string name="add_Expose_text"> Fügen Sie hier neue Exposés hinzu</string>
    <string name="my_Account_text"> Alle Details zu Ihrem Account</string>
    <string name="settings_text"> Configurieren Sie hier Ihre App</string>

    <!-- Allgemein -->
    <string name="action_settings">Einstellungen</string>

    <!-- Cardview Example Texts -->
    <string name="expose_name"> Immobilie 1</string>
    <string name="erstellt_am"> erstellt am:</string>
    <string name="expose_date"> 01.01.2018</string>
    <string name="expose_status"> vermietet</string>
    <string name="expose_adress"> Musterstraße 22 09864 Musterstadt</string>
    <string name="expose_id">1</string>
    <string name="expose_id_text"> ID:</string>

    <!-- Activity Titels -->
    <string name="title_activity_show_all_expose">ShowAllExpose</string>
</resources>
