<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_all_expose"
            android:icon="@drawable/ic_list_white_24dp"
            android:title="@string/show_all_expose_title" />
        <item
            android:id="@+id/nav_add_expose"
            android:icon="@drawable/ic_add_white_24dp"
            android:title="@string/add_expose" />
        <item
            android:id="@+id/nav_my_account"
            android:icon="@drawable/ic_person_white_24dp"
            android:title="@string/my_account" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_white_24dp"
            android:title="@string/action_settings" />
    </group>

    <item android:title="@string/import_export">
        <menu>
            <item
                android:id="@+id/nav_import"
                android:icon="@drawable/ic_file_download_white_24dp"
                android:title="@string/import_expose" />
            <item
                android:id="@+id/nav_export"
                android:icon="@drawable/ic_file_upload_white_24dp"
                android:title="@string/export_expose" />
        </menu>
    </item>

</menu>
