<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_green"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context="com.webgalaxie.blischke.bachelortakeone.SplashScreen">

    <RelativeLayout
        android:id="@+id/l1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp">

        <TextView
            android:id="@+id/welcometext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:text="@string/welcome"
            android:textAlignment="center"
            android:textColor="@color/manu_text"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/appnametextlogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/welcometext"
            android:layout_centerVertical="true"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@color/manu_text"
            android:textSize="36sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/l2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginTop="100dp">

        <TextView
            android:id="@+id/projectoff"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="@string/project_of"
            android:textAlignment="center"
            android:textColor="@color/manu_text"
            android:textSize="12sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="30dp"
            app:srcCompat="@drawable/logo" />


    </RelativeLayout>


</LinearLayout>


